--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/proposta
+spring.datasource.username=root
+spring.datasource.password=Adm!n1str@d0r
+spring.jpa.hibernate.ddl-auto=update
 
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Actuator Properties
+management.endpoints.web.exposure.include=health,info
+
+management.endpoints.enabled-by-default=false
+management.endpoint.info.enabled=true
+management.endpoint.health.enabled=true
+management.endpoint.health.probes.enabled=true
+
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true 
+
+#scheduled
+proposta.timed.cartaoAnalise=${TIMED_CARTAO_ANALISE:60000}
+#external config
+proposta.external.financeira.host=${FINANCEIRA_HOST:localhost}
+proposta.external.financeira.port=${FINANCEIRA_PORT:9999}
+proposta.external.cartoes.host=${CARTOES_HOST:localhost}
+proposta.external.cartoes.port=${CARTOES_PORT:8888}
