--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,15 +11,16 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Actuator Properties
-management.endpoints.web.exposure.include=health,info
-
-management.endpoints.enabled-by-default=false
+management.endpoints.web.exposure.include=health,info, prometheus
 management.endpoint.info.enabled=true
 management.endpoint.health.enabled=true
-management.endpoint.health.probes.enabled=true
+management.endpoint.prometheus.enabled=true
 
-management.health.livenessState.enabled=true
-management.health.readinessState.enabled=true 
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true 
+management.metrics.tags.aplicacao=${NOME_DA_APLICACAO:servico de proposta}
+management.metrics.tags.ambiente=${AMBIENTE:desenvolvimento}
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/nosso-cartao}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/nosso-cartao/protocol/openid-connect/certs}
