--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=Adm!n1str@d0r
 spring.jpa.hibernate.ddl-auto=update
 
+server.port=${PROPOSTA_APP_PORT:8081}
+
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -22,8 +24,8 @@ management.metrics.tags.aplicacao=${NOME_DA_APLICACAO:servico de proposta}
 management.metrics.tags.ambiente=${AMBIENTE:desenvolvimento}
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/nosso-cartao}
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/nosso-cartao/protocol/openid-connect/certs}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/auth/realms/nosso-cartao}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:8080/auth/realms/nosso-cartao/protocol/openid-connect/certs}
 logging.level.org.springframework.security=DEBUG
 
 #scheduled
