--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/pr
 spring.datasource.username=root
 spring.datasource.password=Adm!n1str@d0r
 spring.jpa.hibernate.ddl-auto=update
-
+spring.application.name=proposta
 server.port=${PROPOSTA_APP_PORT:8081}
 
 ## Hibernate Properties
@@ -35,3 +35,12 @@ proposta.external.financeira.host=${FINANCEIRA_HOST:localhost}
 proposta.external.financeira.port=${FINANCEIRA_PORT:9999}
 proposta.external.cartoes.host=${CARTOES_HOST:localhost}
 proposta.external.cartoes.port=${CARTOES_PORT:8888}
+
+# Jaeger - Habilita ou não
+opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
+# Jaeger - Nome do serviço
+opentracing.jaeger.service-name=${spring.application.name}
+# Jaeger - Endereço para enviar os metadados (trace, span, etc)
+opentracing.jaeger.http-sender.url=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
+# Jaeger - Tipo de amostragem (probabilístico) e sua configuração (1 = 100%)
+opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
